fixed overflow

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -3,6 +3,14 @@
   --dark: #0a0a0a;
 }
 
+.homePage{
+  width: 100vw !important;
+  height: 100vh;
+  overflow: hidden !important;
+  /* border: solid; */
+  position: relative;
+}
+
 .hero{
   width:100%;
   height:70vh;
@@ -125,6 +133,7 @@
     width:100% !important;
     height: 80vh;
     overflow:hidden;
+    top: 5vh
      }
 
    .blendingBackground{
@@ -163,7 +172,7 @@
 
    .bottomCenter{
     height: 25px;
-    top: 868px;
+    /* top: 868px; */
     margin:0 0 0 -5%;
    }
 
